--- a/index.html
+++ b/index.html
@@ -1,28 +1,21 @@
+<!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8>"
+        <meta name="view port" content="width=device-width,initial-scale=1.0">
+        <meta http-equiv"X-UA-Compatible" content="ie=edge">
+        <title>Branch1</title>
+        <link rel ="stylesheet" href="./main.css">
 
-<head>
-  <title>Harvest vase</title>
-  <link href="https://fonts.googleapis.com/css?family=Bentham|Playfair+Display|Raleway:400,500|Suranna|Trocchi" rel="stylesheet">
-</head>
+    </head>
+    <body>
+            <h1>Introduction-To-Functions</h1>
+            <div id="output">
+                
+            </div>
 
-<body>
-  <div class="wrapper">
-    <div class="product-img">
-      <img src="http://bit.ly/2tMBBTd" height="420" width="327">
-    </div>
-    <div class="product-info">
-      <div class="product-text">
-        <h1>Harvest Vase</h1>
-        <h2>by studio and friends</h2>
-        <p>Harvest Vases are a reinterpretation<br> of peeled fruits and vegetables as<br> functional objects. The surfaces<br> appear to be sliced and pulled aside,<br> allowing room for growth. </p>
-      </div>
-      <div class="product-price-btn">
-        <p><span>78</span>$</p>
-        <button type="button">buy now</button>
-      </div>
-    </div>
-  </div>
+            <script src="./main.js"></script>
+            <script src="./function.js"></script>
 
-</body>
-
-</html>
+    </body>
+    </html>
