--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
             <script src="./main.js"></script>
             <script src="./function.js"></script>
+            <script src="./objects.js"></script>
+
 
     </body>
     </html>
