--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
             <script src="./main.js"></script>
             <script src="./function.js"></script>
             <script src="./objects.js"></script>
+            <script src="./arrays.js"></script>
+
 
 
     </body>
